<resources>
    <string name="app_name">MusicalStructure</string>
    <!--Activities names in AdndroidManifest file-->
    <string name="all_songs_activity">All Songs</string>
    <string name="albums_activity">Albums</string>
    <string name="artists_activity">Artists</string>
    <string name="genre_activity">Genre</string>
    <string name="favorites_activity">My Favorites</string>
    <string name="play_lists_activity">Playlists</string>
    <string name="scan_media_activity">Scan Media</string>
    <!--TextViews names in activity_main.xml file-->
    <string name="all_songs">All Songs</string>
    <string name="total_music">(10 Musics)</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="genre">Genre</string>
    <string name="playlists">Playlists</string>
    <string name="scan_media">Scan Media</string>
    <string name="favorites">My Favorites</string>
    <!-- Buttons names in activity_all_songs.xml -->
    <string name="bt_all_songs">All Songs</string>
    <string name="bt_albums">Albums</string>
    <string name="bt_artists">Artists</string>
    <string name="bt_genre">Genre</string>
    <string name="bt_playlists">Playlist</string>
    <string name="bt_favorties">My Favorites</string>
    <string name="bt_home">Home</string>

</resources>
