<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              tools:context="com.example.android.musicalstructure.MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bck_image"
        android:scaleType="centerCrop"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/all_songs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_songs"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/total_music"
            android:layout_below="@+id/all_songs"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/layout_linear_one"
            android:orientation="vertical">
            <TextView
                android:id="@+id/albums"
                style="@style/txtview"
                android:text="@string/albums"/>
            <TextView
                android:id="@+id/scanMedia"
                style="@style/txtview"
                android:text="@string/scan_media"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layout_linear_two"
            android:layout_toRightOf="@+id/layout_linear_one">
            <TextView
                android:id="@+id/artists"
                style="@style/txtview"
                android:text="@string/artists"
                />
            <TextView
                android:id="@+id/playlists"
                style="@style/txtview"
                android:text="@string/playlists"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/layout_linear_two">
            <TextView
                android:id="@+id/genre"
                style="@style/txtview"
                android:text="@string/genre"/>
            <TextView
                android:id="@+id/favorites"
                style="@style/txtview"
                android:text="@string/favorites"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>

