<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicalstructure.Genre">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bck_image"
        android:scaleType="centerCrop"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/genre_description"
        android:text="This activity is a collection of all the songs  with respect to genre"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/genre_all_songs"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/genre_description"
        android:text="@string/bt_all_songs"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/genre_albums"
        android:layout_toRightOf="@+id/genre_all_songs"
        android:text="@string/bt_albums"
        android:layout_below="@+id/genre_description"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/genre_artists"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/genre_albums"
        android:text="@string/bt_artists"
        android:layout_below="@+id/genre_description"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/genre_playlist"
        android:layout_marginTop="15dp"
        android:text="@string/bt_playlists"
        android:layout_below="@+id/genre_all_songs"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/genre_favorites"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/genre_playlist"
        android:text="@string/bt_favorties"
        android:layout_below="@+id/genre_albums"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/genre_apphome"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/genre_favorites"
        android:text="@string/bt_home"
        android:layout_below="@+id/genre_artists"/>
</RelativeLayout>
