<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicalstructure.AllSongs">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bck_image"
        android:scaleType="centerCrop"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/songs_description"
        android:text="This activity is a collection of all the songs  on the device"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/allsongs_album"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/songs_description"
        android:text="@string/bt_albums"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/allsongs_artists"
        android:layout_toRightOf="@+id/allsongs_album"
        android:text="@string/bt_artists"
        android:layout_below="@+id/songs_description"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/allsongs_genre"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/allsongs_artists"
        android:text="@string/bt_genre"
        android:layout_below="@+id/songs_description"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/allsongs_playlist"
        android:layout_marginTop="15dp"
        android:text="@string/bt_playlists"
        android:layout_below="@+id/allsongs_album"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/allsongs_favorites"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/allsongs_playlist"
        android:text="@string/bt_favorties"
        android:layout_below="@+id/allsongs_artists"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/allsongs_apphome"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/allsongs_favorites"
        android:text="@string/bt_home"
        android:layout_below="@+id/allsongs_genre"/>
</RelativeLayout>
