<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicalstructure.Albums">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bck_image"
        android:scaleType="centerCrop"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/albums_description"
        android:text="This activity is a collection of albums(collection of songs from a particular movie or singer) on the device"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/albums_all_songs"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/albums_description"
        android:text="@string/bt_all_songs"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/albums_artists"
        android:layout_toRightOf="@+id/albums_all_songs"
        android:text="@string/bt_artists"
        android:layout_below="@+id/albums_description"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/albums_genre"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/albums_artists"
        android:text="@string/bt_genre"
        android:layout_below="@+id/albums_description"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/albums_playlist"
        android:layout_marginTop="15dp"
        android:text="@string/bt_playlists"
        android:layout_below="@+id/albums_all_songs"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/albums_favorites"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/albums_playlist"
        android:text="@string/bt_favorties"
        android:layout_below="@+id/albums_artists"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/albums_apphome"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/albums_favorites"
        android:text="@string/bt_home"
        android:layout_below="@+id/albums_genre"/>
</RelativeLayout>
