<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicalstructure.Playlists">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bck_image"
        android:scaleType="centerCrop"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playlists_description"
        android:text="This activity is a collection of all the songs saved as user created playlist.To create a playlist in android programmatically i found these links useful:
        http://stackoverflow.com/questions/24258600/how-to-create-playlist-in-android-programmatically
        http://www.assistanttools.com/articles/m3u_playlist_format.shtml"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playlists_all_songs"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/playlists_description"
        android:text="@string/bt_all_songs"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/playlists_albums"
        android:layout_toRightOf="@+id/playlists_all_songs"
        android:text="@string/bt_albums"
        android:layout_below="@+id/playlists_description"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playlists_artists"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/playlists_albums"
        android:text="@string/bt_artists"
        android:layout_below="@+id/playlists_description"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playlists_genre"
        android:layout_marginTop="15dp"
        android:text="@string/bt_genre"
        android:layout_below="@+id/playlists_all_songs"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playlists_favorites"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/playlists_genre"
        android:text="@string/bt_favorties"
        android:layout_below="@+id/playlists_albums"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playlists_apphome"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/playlists_favorites"
        android:text="@string/bt_home"
        android:layout_below="@+id/playlists_artists"/>
</RelativeLayout>
